Add rule export packages from command line